--- a/TestSkolKompis/TestSkolKompis.csproj
+++ b/TestSkolKompis/TestSkolKompis.csproj
@@ -77,6 +77,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MVVM\View\Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\Window2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Theme\MenuButtonTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -87,6 +95,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVVM\Data\PersonData.cs" />
+    <Compile Include="MVVM\Model\Personer.cs" />
     <Compile Include="MVVM\ViewModel\HomeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MinProfilViewModel.cs" />
@@ -95,6 +105,12 @@
     </Compile>
     <Compile Include="MVVM\View\MinProfil.xaml.cs">
       <DependentUpon>MinProfil.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\Window2.xaml.cs">
+      <DependentUpon>Window2.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -123,10 +139,25 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fonts\" />
-    <Folder Include="MVVM\Model\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\ChatGPT Image 8 maj 2025 02_59_39.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\anna.jpg" />
+    <Resource Include="Images\Erik.jpg" />
+    <Resource Include="Images\Lisa.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Alex.png" />
+    <Resource Include="Images\Sara.jpg" />
+    <Resource Include="Images\Daniel.jpg" />
+    <Resource Include="Images\Emma.jpg" />
+    <Resource Include="Images\filip.jpg" />
+    <Resource Include="Images\Johan.jpg" />
+    <Resource Include="Images\Markus.jpg" />
+    <Resource Include="Images\Sofia.jpg" />
+    <Resource Include="Images\studentSöker.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
